syntax = "proto3";

package dex;

option go_package = "github.com/DIMO-Network/token-exchange-api/internal/middleware/dex";

message User {
  string user_id = 1;
  string conn_id = 2;
}
