syntax = "proto3";

option go_package = "github.com/DIMO-Network/token-exchange-api/pkg/grpc";


package grpc;

service TokenExchangeService {
  rpc AccessCheck(AccessCheckRequest) returns (AccessCheckResponse);
}

message AccessCheckRequest {
  // The grantee address.
  string grantee = 1;
  // The token Id of the VC to check.
  string asset = 2;
  // The permissions to check.
  repeated string privileges = 3;
  // The events to check.
  repeated EventFilter events = 4;
}

message EventFilter {
  string event_type = 1;
  string source = 2;
  repeated string ids = 3;
}

message AccessCheckResponse { 
  bool has_access = 1;
  RichError rich_error = 2;
}

message RichError {
  int32 code = 1;
  string external_msg = 2;
  string err = 3;
}
